# auction-system

./: .gitignore  README.md  docker-compose.yml
be-client/: CMakeLists.txt  Dockerfile  README.md  main.cpp
be-client/api/: auth_api.cpp  auth_api.h  product_api.cpp  product_api.h  room_api.cpp  room_api.h
be-client/db/: schema.sql  seed.sql  sqlite.cpp  sqlite.h
be-client/model/: product.h  room.h  user.h
be-client/security/: jwt.cpp  jwt.h
be-client/tcp/: tcp_client.cpp  tcp_client.h
be-client/ws/: ws_server.cpp  ws_server.h
client/: CMakeLists.txt  mainwindow.ui
client/model/: User.h
client/network/: Protocol.cpp  Protocol.h  TcpClient.cpp  TcpClient.h
client/src/: mainwindow.cpp  mainwindow.h
client/src/views/: loginpage.cpp  loginpage.h  registerpage.cpp  registerpage.h
client/ui/: mainwindow.ui
client/ui/auth/: loginpage.ui  registerpage.ui
common/: protocol.txt
fe-client/: package-lock.json  package.json
fe-client/public/: index.html
fe-client/src/: App.jsx  AuthContext.jsx  index.css  websocket.js
fe-client/src/api/: auth.js  product.js  products.js  room.js  rooms.js
fe-client/src/components/: EventLog.jsx  StatusBadge.jsx  WSLog.jsx
fe-client/src/components/auction/: ActiveProduct.jsx  Badge.jsx  BidHistory.jsx  Card.jsx  Participants.jsx  QueueList.jsx  Ranking.jsx  RoomHeader.jsx
fe-client/src/pages/: AuctionRoomPage.jsx  LoginPage.jsx  MyProductDetail.jsx  MyProductList.jsx  MyRoomDetail.jsx  MyRoomList.jsx  ProductCreate.jsx  ProductCreatePage.jsx  ProductDetail.jsx  ProductEdit.jsx  ProductList.jsx  ProductListPage.jsx  RegisterPage.jsx  RoomCreate.jsx  RoomCreatePage.jsx  RoomDetail.jsx  RoomList.jsx  RoomListPage.jsx
gateway/: CMakeLists.txt  Dockerfile
gateway/api/: auth_api.cpp  auth_api.h  product_api.cpp  product_api.h  room_api.cpp  room_api.h
gateway/include/: tcp_client.h
gateway/src/: main.cpp  tcp_client.cpp
gateway/ws/: ws_server.cpp
protocol/: Protocol.h
server/: CMakeLists.txt  Dockerfile  Makefile  main.cpp  server.cpp
server/db/: Database.cpp  Database.h  schema.sql
server/network/: ClientSession.cpp  ClientSession.h  TcpServer.cpp  TcpServer.h
server/protocol/: CommandHandler.cpp  CommandHandler.h  Protocol.cpp  Protocol.h
tcp-server/: CMakeLists.txt  Dockerfile
tcp-server/db/: schema.sql  seed.sql
tcp-server/include/: database.h  packet_io.h  packet_router.h  session_manager.h  tcp_server.h
tcp-server/src/: database.cpp  main.cpp  packet_io.cpp  packet_router.cpp  session_manager.cpp  tcp_server.cpp
